# cilo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/cilo/: ansi_escape.h  append_buffer.h  common.h  editor.h  error.h  file_io.h  string_buffer.h  terminal.h  utils.h  window_size.h
include/cilo/editor/: highlight.h  input.h  operations.h  row.h  state.h  syntax.h
src/: CMakeLists.txt  append_buffer.c  dummy.c  editor.c  error.c  file_io.c  main.c  string_buffer.c  terminal.c  window_size.c
src/editor/: highlight.c  input.c  operations.c  row.c  state.c  syntax.c
